# A-Rust-Chess-Engine

./: Cargo.toml  README.md
arce_lib/: Cargo.toml
arce_lib/src/: attack_tables.rs  attacks.rs  bitboard.rs  board.rs  castle_rights.rs  evaluation.rs  fen.rs  lib.rs  move_gen.rs  move_list.rs  perft.rs  piece.rs  position.rs  search.rs  side.rs  square.rs
arce_lib/src/attack_tables/: bishops.rs  pawns.rs
arce_lib/src/attack_tables/magics/: rook.rs
arce_lib/src/attacks/: magics.rs  rooks.rs
arce_lib/src/attacks/magics/: bishop.rs  rook.rs
arce_lib/src/utils/: fen.rs  mod.rs  random.rs  uci.rs
src/: board.rs  fen.rs  main.rs  move_gen.rs  move_list.rs  perft.rs  square.rs
src/attack_tables/: kings.rs  knights.rs  magics.rs
src/attack_tables/magics/: bishop.rs
