[package]
name = "arce"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "engine"
path = "src/main.rs"

[[bin]]
name = "perft"
path = "src/perft.rs"

[profile.release]
lto = true
panic = "abort"

[dependencies]
arce_lib = {path = "arce_lib"}